Ken's comments implemented.

--- a/2017/0915 ISMD/proceedings/jan_kaspar_ismd2017_proceedings.tex
+++ b/2017/0915 ISMD/proceedings/jan_kaspar_ismd2017_proceedings.tex
@@ -52,11 +52,11 @@ The aim of this contribution is to compare soft-diffraction results across the L
 
 At the LHC there are two experiments equipped with forward proton taggers needed to measure elastic scattering: ATLAS-ALFA and TOTEM. Their measurements are summarised in Figure~\ref{f:es summary}. Different regions of four-momentum transfer squared, $t$, probe different physics regimes of elastic scattering. At very low $|t|$, the interference between Coulomb and nuclear amplitudes (CNI) takes place. At larger values of $|t|$ up to $\approx 0.4\un{GeV^2}$, the differential cross-section presents almost exponential decrease sometimes called diffraction cone. This region is followed by a dip and a bump which are often explained by an interference of different amplitude components. At high values of $|t|$, where the cross-section exhibits a smooth and uniform decrease, one may expect a transition from non-perturbative to perturbative regime.
 
-The inset of Figure~\ref{f:es summary} compares the measurements of ATLAS-ALFA and TOTEM which are in general in good agreement, especially for what slope is concerned. At $\sqrt s = 8\un{TeV}$, the measurement by ATLAS-ALFA is a little lower than the one by TOTEM which will be further discussed in Section~\ref{s:cs}.
+The inset of Figure~\ref{f:es summary} compares the measurements of ATLAS-ALFA and TOTEM which are in general in good agreement, especially for what the shape is concerned. At $\sqrt s = 8\un{TeV}$, the measurement by ATLAS-ALFA is a little lower than the one by TOTEM which will be further discussed in Section~\ref{s:cs}.
 
 Figure~\ref{f:es summary} confirms the phenomenon of ``diffraction cone shrinkage'' also at LHC energies: the position of the dip moves to lower $|t|$ values with increasing energy. At $\sqrt s = 7\un{TeV}$ the dip occurs at $|t| \approx 0.53\un{GeV^2}$ while the preliminary data at $13\un{TeV}$ indicate it at about $|t| \approx 0.48\un{GeV^2}$.
 
-The $\sqrt s = 13\un{TeV}$ TOTEM cross-section at high $|t|$ presents a uniform decrease. Although this measurement is preliminary, the yet-to-be applied corrections are unlikely to create any structures. This observation contradicts predictions of many theoretical/phenomenological models where secondary dips or oscillations appear (see e.g.~\cite{elegent}). The TOTEM measurement, in turn, excludes all such models. In fact, it rules out all models built on the optical analogy -- where multiple dips or oscillations are inevitable. On the other hand, the measurement may be favouring a hypothesis that large $|t|$ elastic scattering is dominated by a perturbative QCD amplitude, e.g.~triple gluon exchange proposed by Donnachie and Landshoff.
+The $\sqrt s = 13\un{TeV}$ TOTEM cross-section at $|t| \gtrsim 1\un{GeV^2}$ presents a uniform decrease. Although this measurement is preliminary, the yet-to-be applied corrections are unlikely to create any structures. This observation contradicts predictions of many theoretical/phenomenological models where secondary dips or oscillations appear (see e.g.~\cite{elegent}). The TOTEM measurement, in turn, excludes all such models. In fact, it rules out all models built on the optical analogy -- where multiple dips or oscillations are inevitable. On the other hand, the measurement may be favouring a hypothesis that large $|t|$ elastic scattering is dominated by a perturbative QCD amplitude, e.g.~triple gluon exchange proposed by Donnachie and Landshoff \cite{donnachie-landshoff}.
 
 \begin{figure}[h]
 \centering
@@ -125,7 +125,7 @@ The comparison is even more complicated for the inelastic cross-section given th
 \centering
 \includegraphics[height=6cm,clip]{fig/sd_7TeV.png}
 \vskip-4mm
-\caption{Illustration of TOTEM single diffraction measurement, adapted from slides by H.~Saarikko.}
+\caption{Illustration of TOTEM single diffraction measurement, adapted from material by V.~Avati and F~.Oljemark. The relative uncertainty of cross-sections is estimated to $20\un{\%}$ and $15\un{\%}$ for the slope $B$.}
 \label{f:sd TOTEM}
 \end{figure}
 
@@ -133,7 +133,7 @@ ALICE has published \cite{alice-inel-sd-dd} a single-diffraction measurement bas
 
 CMS has published \cite{cms-diff-7tev} a measurement based on counting events with rapidity gaps on one side of the detector. Also in this analysis the forward protons were not identified. The cross-section was presented as a function of $\xi$, the fractional momentum loss: showing a gentle decrease of the cross-section with $\xi$, where none of the considered Monte-Carlo generators was able describe all the features in detail.
 
-TOTEM has preliminary (not yet published) results from an analysis at $\sqrt s = 7\un{TeV}$ where the surviving protons are tagged. As illustrated in Figure~\ref{f:sd TOTEM}, the analysis is performed in 3 diffractive-mass (or $\xi$) bins. They are defined by the acceptance of TOTEM subdetectors and the relation between the rapidity gap, $\Delta y$, and $\xi$: $\Delta y \approx -\log\xi$. For each $\xi$ bin, the results are presented as a function of the proton four-momentum transfer squared, $t$. The distributions are compatible with exponentials where the slope, $B$, decreases with increasing $\xi$. Summing the preliminary per-bin cross-sections yields $(6.5\pm 1.3)\un{mb}$. This can be complemented with a cross-section of $(2.6\pm 2.2)\un{mb}$ which corresponds to events with all particles more forward than the T2 acceptance \cite{totem-si-inel-7tev}. As this cross-section is expected to be dominated by single diffraction, one can estimate $\sigma_{\rm SD} = (9.1 \pm 2.9)\un{mb}$. This value corresponds to cutoff $\xi \lesssim 0.022$ and is represented by the green point in Figure~\ref{f:sd cs summary}.
+TOTEM has preliminary results \cite{totem-sd-7tev-prelim} from an analysis at $\sqrt s = 7\un{TeV}$ where the surviving protons are tagged. As illustrated in Figure~\ref{f:sd TOTEM}, the analysis is performed in 3 diffractive-mass (or $\xi$) bins. They are defined by the acceptance of TOTEM subdetectors and the relation between the rapidity gap, $\Delta y$, and $\xi$: $\Delta y \approx -\log\xi$. For each $\xi$ bin, the results are presented as a function of the proton four-momentum transfer squared, $t$. The distributions are compatible with exponentials where the slope, $B$, decreases with increasing $\xi$. Summing the preliminary per-bin cross-sections yields $(6.5\pm 1.3)\un{mb}$. This can be complemented with a cross-section of $(2.6\pm 2.2)\un{mb}$ which corresponds to events with all particles more forward than the T2 acceptance \cite{totem-si-inel-7tev}. As this cross-section is expected to be dominated by single diffraction, one can estimate $\sigma_{\rm SD} = (9.1 \pm 2.9)\un{mb}$. This value corresponds to cutoff $\xi \lesssim 0.022$ and is represented by the green point in Figure~\ref{f:sd cs summary}.
 
 There is also an ongoing combined CMS+TOTEM analysis at $\sqrt s = 8\un{TeV}$ which combines the benefits of a central detector and forward-proton taggers. This analysis aims at event classification as non-diffractive, single-diffractive and double-diffractive.
 
@@ -196,6 +196,9 @@ As mentioned in Section~\ref{s:sd}, the combined CMS + TOTEM analysis is expecte
 \bibitem{elegent}
 	J. Kašpar, Comput.~Phys.~Commun.~\textbf{185}, 1081--1084 (2014); http://elegent.hepforge.org/
 
+\bibitem{donnachie-landshoff}
+	A.~Donnachie, P.~V.~Landshoff, Phys.~Lett.~B \textbf{387}, 637--641 (1996)
+
 \bibitem{b-vs-s-data}
 	\Name{ISR (CR Collaboration)}, \REVIEW{Phys.~Lett.}{B62}{1976}{460}; 
 	\Name{ISR (ACHGT Collaboration)}, \REVIEW{Phys.~Lett.}{B39}{1972}{663}; 
@@ -243,7 +246,7 @@ As mentioned in Section~\ref{s:sd}, the combined CMS + TOTEM analysis is expecte
 	TOTEM Collaboration, Europhys.~Lett.~\textbf{101}, 21004 (2013)
 
 \bibitem{totem-si-2.76tev}
-	TOTEM Collaboration, publication in preparation
+	TOTEM Collaboration, Total cross-section measurement at $\sqrt s = 2.76\un{TeV}$, publication in preparation
 
 \bibitem{alice-inel-sd-dd}
 	ALICE Collaboration, Eur.~Phys.~J.~\textbf{C73}, 2456 (2013)
@@ -265,6 +268,9 @@ As mentioned in Section~\ref{s:sd}, the combined CMS + TOTEM analysis is expecte
 
 \bibitem{cms-diff-7tev}
 	CMS Collaboration, CMS-PAS-FSQ-12-005; arXiv:1503.08689
+
+\bibitem{totem-sd-7tev-prelim}
+	F.~Oljemark and K.~Österberg on behalf of TOTEM collaboration, Studies of Soft Single Diffraction with TOTEM at the LHC at $7\un{TeV}$, Contribution to LHC students poster session 2013, https://indico.cern.ch/event/238337/
 
 \bibitem{totem-si-inel-7tev}
 	TOTEM Collaboration, Europhys.~Lett.~\textbf{101}, 21003 (2013)
